k8s/cert-manager/multi-app-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: webapp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: webapp.k8s.prod.bh7cw.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: webapp-deployment-svc
          servicePort: 80
  tls:
  - secretName: webapp-tls
    hosts:
      - webapp.k8s.prod.bh7cw.me
